@@ -1,76 +1,70 @@
 package network;
 
+import GUI.GameScreen;
 import GUI.GuiScale;
+import GUI.MainMenu;
 import GUI.ScreenDrawHelper;
 import javafx.animation.AnimationTimer;
 import javafx.application.Platform;
-import javafx.collections.FXCollections;
-import javafx.geometry.Insets;
+import javafx.scene.Group;
 import javafx.scene.Scene;
 import javafx.scene.canvas.Canvas;
 import javafx.scene.canvas.GraphicsContext;
-import javafx.scene.control.Button;
-import javafx.scene.control.CheckBox;
-import javafx.scene.control.ChoiceBox;
-import javafx.scene.control.Label;
-import javafx.scene.control.ScrollPane;
-import javafx.scene.image.Image;
-import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
 import javafx.scene.text.TextAlignment;
-import javafx.stage.Modality;
 import javafx.stage.Stage;
 import logic.Game;
+import model.ActionCardType;
+import model.ActionCards;
+import model.Card;
+import model.DrawPileAndDiscardPile;
+import model.MoneyCards;
+import model.Player;
+import model.PropertiesCards;
+import model.PropertiesCardsType;
+import model.PropertyColor;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.InputStream;
 import java.io.PrintWriter;
 import java.net.Socket;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.regex.Pattern;
 
 /**
- * Canvas-based LAN client that mirrors the local game table layout while sending
- * commands to the server instead of mutating a local Game directly.
+ * Online client shell that reuses the same GameScreen and click flow as local play.
  */
 public class OnlinePlayWindow extends Stage {
     private static final int PORT = 5555;
-    private static final double CARD_WIDTH = 82;
-    private static final double CARD_HEIGHT = 112;
-    private static final double SMALL_CARD_WIDTH = 60;
-    private static final double SMALL_CARD_HEIGHT = 85;
-    private static final List<String> COLORS = List.of(
-            "DARK_BLUE", "ORANGE", "BLACK", "RED", "DARK_GREEN",
-            "BROWN", "PINK", "LIGHT_BLUE", "LIGHT_GREEN", "YELLOW"
-    );
 
     private final String host;
-    private final Canvas canvas = new Canvas(GuiScale.canvasWidth(), GuiScale.canvasHeight());
+    private final Game game = new Game();
+    private final GameScreen gameScreen = new GameScreen(game);
+    private final Canvas lobbyCanvas = new Canvas(GuiScale.canvasWidth(), GuiScale.canvasHeight());
     private final ArrayList<String> logLines = new ArrayList<>();
-    private final Map<String, Image> imageCache = new HashMap<>();
 
     private volatile boolean closed;
     private Socket socket;
     private PrintWriter out;
-    private OnlineState state = OnlineState.empty();
-    private String connectionText = "Connecting...";
     private boolean started;
-    private double paymentButtonY = -1;
-    private double justSayNoButtonY = -1;
+    private int myPlayerId;
+    private String connectionText = "Connecting...";
 
     public OnlinePlayWindow(Stage owner, String host) {
         this.host = host;
         initOwner(owner);
         setTitle("LAN Game - " + host + ":" + PORT);
-        setScene(new Scene(new javafx.scene.Group(canvas), GuiScale.canvasWidth(), GuiScale.canvasHeight()));
+
+        Group root = new Group(lobbyCanvas, gameScreen.getCanvas());
+        Scene scene = new Scene(root, GuiScale.canvasWidth(), GuiScale.canvasHeight());
+        setScene(scene);
         setOnCloseRequest(e -> shutdown());
-        canvas.setOnMouseClicked(e -> handleClick(GuiScale.toLogical(e.getX()), GuiScale.toLogical(e.getY())));
+        scene.setOnMouseClicked(e -> handleMouseClick(GuiScale.toLogical(e.getX()), GuiScale.toLogical(e.getY())));
 
         startRenderLoop();
         appendLog("Connecting to " + host + "...");
@@ -81,632 +75,426 @@ public class OnlinePlayWindow extends Stage {
         new AnimationTimer() {
             @Override
             public void handle(long now) {
-                paint();
+                if (started) {
+                    lobbyCanvas.setVisible(false);
+                    gameScreen.setShow(true);
+                    gameScreen.paint();
+                } else {
+                    gameScreen.setShow(false);
+                    gameScreen.clear();
+                    lobbyCanvas.setVisible(true);
+                    paintLobby();
+                }
             }
         }.start();
     }
 
-    private void paint() {
-        GraphicsContext gc = canvas.getGraphicsContext2D();
+    private void paintLobby() {
+        GraphicsContext gc = lobbyCanvas.getGraphicsContext2D();
         GuiScale.prepare(gc);
         ScreenDrawHelper.drawPageBackground(gc, Game.SCREEN_WIDTH, Game.SCREEN_HEIGHT);
-        drawHeader(gc);
-        drawBank(gc);
-        drawProperties(gc);
-        drawHand(gc);
-        drawSidePanel(gc);
-        drawLog(gc);
-    }
+        ScreenDrawHelper.drawPanel(gc, 250, 120, 535, 380);
 
-    private void drawHeader(GraphicsContext gc) {
-        ScreenDrawHelper.drawPanel(gc, 16, 14, 735, 94);
-        gc.setTextAlign(TextAlignment.LEFT);
+        gc.setTextAlign(TextAlignment.CENTER);
+        gc.setFill(ScreenDrawHelper.ACCENT);
+        gc.setFont(Font.font("Arial", 38));
+        gc.fillText("LAN Game", Game.SCREEN_WIDTH / 2, 185);
+
         gc.setFill(ScreenDrawHelper.TEXT);
-        gc.setFont(Font.font("Arial", 22));
-
-        String title = started
-                ? "Player " + state.currentPlayer + "'s Turn"
-                : "LAN Game Lobby";
-        gc.fillText(title, 36, 42);
-
-        String you = state.you > 0 ? "You are Player " + state.you : "Waiting for player id";
-        ScreenDrawHelper.drawBadge(gc, 36, 62, 150, 28, you, Color.rgb(255, 226, 166));
-        ScreenDrawHelper.drawBadge(gc, 200, 62, 170, 28, connectionText, Color.rgb(167, 243, 208));
-
-        if (state.discardPhase) {
-            gc.setFill(ScreenDrawHelper.DANGER);
-            gc.setFont(Font.font("Arial", 15));
-            gc.fillText("Discard Phase: choose hand cards to discard", 500, 67);
-        }
-    }
-
-    private void drawBank(GraphicsContext gc) {
-        ScreenDrawHelper.drawPanel(gc, 16, 118, 735, 128);
-        ScreenDrawHelper.drawSectionTitle(gc, "Bank Area", 32, 132);
-        drawSmallCards(gc, state.yourBank, 32, 160, false);
-    }
-
-    private void drawProperties(GraphicsContext gc) {
-        ScreenDrawHelper.drawPanel(gc, 16, 260, 735, 128);
-        ScreenDrawHelper.drawSectionTitle(gc, "Property Area", 32, 274);
-        drawSmallCards(gc, state.yourProperties, 32, 302, true);
-    }
-
-    private void drawHand(GraphicsContext gc) {
-        ScreenDrawHelper.drawPanel(gc, 16, 404, 735, 205);
-        ScreenDrawHelper.drawSectionTitle(gc, "Your Hand", 32, 418);
-        if (!started) {
-            gc.setFill(ScreenDrawHelper.MUTED_TEXT);
-            gc.setFont(Font.font("Arial", 16));
-            gc.fillText("Cards will appear here after Start Game.", 32, 470);
-            return;
-        }
-
-        double gap = 10;
-        if (state.yourHand.size() > 1) {
-            double total = state.yourHand.size() * CARD_WIDTH + (state.yourHand.size() - 1) * gap;
-            if (total > 700) {
-                gap = (700 - state.yourHand.size() * CARD_WIDTH) / (state.yourHand.size() - 1);
-            }
-        }
-
-        for (CardInfo card : state.yourHand) {
-            double x = handCardX(card.index, gap);
-            double y = 465;
-            drawLargeCard(gc, card, x, y);
-            gc.setFill(Color.rgb(255, 255, 255, 0.92));
-            gc.fillOval(x + 4, y + 4, 22, 22);
-            gc.setFill(Color.rgb(30, 35, 48));
-            gc.setFont(Font.font("Arial", 12));
-            gc.setTextAlign(TextAlignment.CENTER);
-            gc.fillText(Integer.toString(card.index), x + 15, y + 19);
-        }
-    }
-
-    private double handCardX(int oneBasedIndex, double gap) {
-        return 32 + (oneBasedIndex - 1) * (CARD_WIDTH + gap);
-    }
-
-    private void drawSidePanel(GraphicsContext gc) {
-        ScreenDrawHelper.drawPanel(gc, 775, 14, 244, 595);
-        ScreenDrawHelper.drawSectionTitle(gc, "Online", 795, 32);
-
-        drawSideText(gc, "Players", 795, 78);
-        double y = 104;
-        if (state.players.isEmpty()) {
-            drawMuted(gc, "Waiting for players...", 795, y);
-            y += 28;
-        } else {
-            for (PlayerSummary player : state.players) {
-                String marker = player.id == state.you ? " (you)" : "";
-                drawMuted(gc, "P" + player.id + marker + "  hand " + player.hand
-                        + "  bank " + player.bank + "  prop " + player.properties, 795, y);
-                y += 24;
-            }
-        }
-
-        drawPayment(gc, Math.max(210, y + 10));
-        drawButtons(gc);
-    }
-
-    private void drawPayment(GraphicsContext gc, double y) {
-        paymentButtonY = -1;
-        justSayNoButtonY = -1;
-        drawSideText(gc, "Payment", 795, y);
-        if (!state.payment.active) {
-            drawMuted(gc, "No payment due", 795, y + 28);
-            return;
-        }
-
-        drawMuted(gc, "P" + state.payment.payer + " pays P" + state.payment.receiver
-                + ": " + state.payment.amount + "M", 795, y + 28);
-        if (state.payment.youMustPay) {
-            paymentButtonY = y + 58;
-            ScreenDrawHelper.drawButton(gc, 795, y + 58, 160, 38, "Select Payment");
-            if (state.payment.canJustSayNo) {
-                justSayNoButtonY = y + 106;
-                ScreenDrawHelper.drawButton(gc, 795, y + 106, 160, 38, "Just Say No");
-            }
-        } else {
-            drawMuted(gc, "Waiting for Player " + state.payment.payer, 795, y + 58);
-        }
-    }
-
-    private void drawButtons(GraphicsContext gc) {
-        if (!started) {
-            ScreenDrawHelper.drawButton(gc, 795, 500, 180, 40, "Start Game");
-        } else if (state.you == state.currentPlayer && !state.payment.youMustPay) {
-            ScreenDrawHelper.drawButton(gc, 795, 500, 180, 40, "End Turn");
-        } else {
-            ScreenDrawHelper.drawDisabledButton(gc, 795, 500, 180, 40, "End Turn");
-        }
-        ScreenDrawHelper.drawButton(gc, 795, 552, 180, 40, "Refresh");
-    }
-
-    private void drawLog(GraphicsContext gc) {
-        gc.setFill(ScreenDrawHelper.MUTED_TEXT);
-        gc.setFont(Font.font("Arial", 12));
-        gc.setTextAlign(TextAlignment.LEFT);
-        double y = 390;
-        int start = Math.max(0, logLines.size() - 5);
-        for (int i = start; i < logLines.size(); i++) {
-            gc.fillText(logLines.get(i), 795, y);
-            y += 19;
-        }
-    }
-
-    private void drawSmallCards(GraphicsContext gc, List<CardInfo> cards, double x, double y, boolean property) {
-        if (cards.isEmpty()) {
-            drawMuted(gc, "(empty)", x, y + 32);
-            return;
-        }
-        for (int i = 0; i < Math.min(8, cards.size()); i++) {
-            drawSmallCard(gc, cards.get(i), x + i * 75, y, property);
-        }
-    }
-
-    private void drawLargeCard(GraphicsContext gc, CardInfo card, double x, double y) {
-        if (drawCardImage(gc, card, x, y, CARD_WIDTH, CARD_HEIGHT)) {
-            return;
-        }
-
-        Color fill = colorFor(card);
-        gc.setFill(fill);
-        gc.fillRoundRect(x, y, CARD_WIDTH, CARD_HEIGHT, 12, 12);
-        gc.setStroke(Color.rgb(20, 24, 34));
-        gc.strokeRoundRect(x, y, CARD_WIDTH, CARD_HEIGHT, 12, 12);
-        gc.setFill(Color.rgb(20, 24, 34));
-        gc.setFont(Font.font("Arial", 12));
-        gc.setTextAlign(TextAlignment.CENTER);
-        gc.fillText(card.title(), x + CARD_WIDTH / 2, y + 30);
         gc.setFont(Font.font("Arial", 18));
-        gc.fillText(card.value + "M", x + CARD_WIDTH / 2, y + 92);
+        gc.fillText(connectionText + "  " + host + ":" + PORT, Game.SCREEN_WIDTH / 2, 235);
+        gc.fillText(myPlayerId > 0 ? "You are Player " + myPlayerId : "Waiting for player id",
+                Game.SCREEN_WIDTH / 2, 270);
+
+        ScreenDrawHelper.drawButton(gc, 390, 320, 255, 48, "Start Game");
+        ScreenDrawHelper.drawButton(gc, 390, 390, 255, 48, "Refresh Players");
+
+        gc.setFill(ScreenDrawHelper.MUTED_TEXT);
+        gc.setFont(Font.font("Arial", 13));
+        int start = Math.max(0, logLines.size() - 4);
+        double y = 535;
+        for (int i = start; i < logLines.size(); i++) {
+            gc.fillText(logLines.get(i), Game.SCREEN_WIDTH / 2, y);
+            y += 18;
+        }
     }
 
-    private void drawSmallCard(GraphicsContext gc, CardInfo card, double x, double y, boolean property) {
-        if (drawCardImage(gc, card, x, y, SMALL_CARD_WIDTH, SMALL_CARD_HEIGHT)) {
+    private void handleMouseClick(double x, double y) {
+        if (!started) {
+            if (isRect(x, y, 390, 320, 255, 48)) {
+                send("START_GAME", "");
+            } else if (isRect(x, y, 390, 390, 255, 48)) {
+                send("PLAYERS", "");
+            }
             return;
         }
 
-        gc.setFill(colorFor(card));
-        gc.fillRoundRect(x, y, SMALL_CARD_WIDTH, SMALL_CARD_HEIGHT, 10, 10);
-        gc.setStroke(Color.rgb(20, 24, 34));
-        gc.strokeRoundRect(x, y, SMALL_CARD_WIDTH, SMALL_CARD_HEIGHT, 10, 10);
-        gc.setFill(Color.rgb(20, 24, 34));
-        gc.setFont(Font.font("Arial", 9));
-        gc.setTextAlign(TextAlignment.CENTER);
-        gc.fillText(property ? card.displayPropertyColor() : card.title(), x + 30, y + 24);
-        gc.setFont(Font.font("Arial", 13));
-        gc.fillText(card.value + "M", x + 30, y + 66);
+        if (handleActionCardChoiceClick(x, y)) {
+            return;
+        }
+        if (handleSelectionModeClick(x, y)) {
+            return;
+        }
+        if (handlePlayerDetailPopupClick(x, y)) {
+            return;
+        }
+        if (game.isWin()) {
+            return;
+        }
+        if (gameScreen.handleBackgroundPageButtonClick(x, y)) {
+            return;
+        }
+        if (handleWildCardClick(x, y)) {
+            return;
+        }
+        if (handleButtonClick(x, y)) {
+            return;
+        }
+        handleHandCardClick(x, y);
     }
 
-    private boolean drawCardImage(GraphicsContext gc, CardInfo card, double x, double y, double width, double height) {
-        if (card.imagePath == null || card.imagePath.isBlank()) {
+    private boolean handleActionCardChoiceClick(double x, double y) {
+        if (!gameScreen.isActionCardChoiceShowing()) {
             return false;
         }
 
-        Image image = loadImage(card.imagePath);
-        if (image == null || image.isError()) {
-            return false;
+        if (gameScreen.isActionCardChoiceCancelClicked(x, y)) {
+            gameScreen.closeActionCardChoice();
+            return true;
         }
 
-        gc.drawImage(image, x, y, width, height);
+        ActionCards selectedCard = gameScreen.getSelectedActionCardChoiceCard();
+        if (selectedCard == null) {
+            gameScreen.closeActionCardChoice();
+            return true;
+        }
+
+        if (gameScreen.isActionCardChoiceMoneyClicked(x, y)) {
+            send("PLAY_AS_MONEY", handNumber(selectedCard));
+            gameScreen.closeActionCardChoice();
+            return true;
+        }
+
+        if (gameScreen.isActionCardChoiceActionClicked(x, y)) {
+            if (!gameScreen.canUseSelectedActionCardAsAction()) {
+                return true;
+            }
+            gameScreen.closeActionCardChoice();
+            handleActionCardClick(selectedCard);
+            return true;
+        }
+
         return true;
     }
 
-    private Image loadImage(String path) {
-        if (imageCache.containsKey(path)) {
-            return imageCache.get(path);
+    private boolean handlePlayerDetailPopupClick(double x, double y) {
+        if (!gameScreen.isPlayerDetailPopupShowing()) {
+            return false;
         }
-
-        InputStream inputStream = OnlinePlayWindow.class.getResourceAsStream(path);
-        if (inputStream == null) {
-            imageCache.put(path, null);
-            return null;
+        if (gameScreen.isPlayerDetailPopupCloseClicked(x, y)) {
+            gameScreen.closePlayerDetailPopup();
+            return true;
         }
-
-        Image image = new Image(inputStream);
-        imageCache.put(path, image);
-        return image;
+        if (gameScreen.handlePlayerDetailPopupPageButtonClick(x, y)) {
+            return true;
+        }
+        return true;
     }
 
-    private Color colorFor(CardInfo card) {
-        return switch (card.kind) {
-            case MONEY -> Color.GOLD;
-            case ACTION -> Color.rgb(255, 224, 178);
-            case PROPERTY -> Color.rgb(158, 216, 255);
-            case UNKNOWN -> Color.LIGHTGRAY;
-        };
+    private boolean handleSelectionModeClick(double x, double y) {
+        if (handlePaymentSelection(x, y)) {
+            return true;
+        }
+        if (handleSlyDealSelection(x, y)) {
+            return true;
+        }
+        if (handleForcedDealSelection(x, y)) {
+            return true;
+        }
+        if (handleMultipleColorRentSelection(x, y)) {
+            return true;
+        }
+        if (handleDebtCollectorSelection(x, y)) {
+            return true;
+        }
+        if (handleDealBreakerSelection(x, y)) {
+            return true;
+        }
+        if (handleBuildingSelection(x, y)) {
+            return true;
+        }
+        return handleTwoColorRentSelection(x, y);
     }
 
-    private void drawSideText(GraphicsContext gc, String text, double x, double y) {
-        gc.setFill(ScreenDrawHelper.TEXT);
-        gc.setFont(Font.font("Arial", 18));
-        gc.setTextAlign(TextAlignment.LEFT);
-        gc.fillText(text, x, y);
-    }
-
-    private void drawMuted(GraphicsContext gc, String text, double x, double y) {
-        gc.setFill(ScreenDrawHelper.MUTED_TEXT);
-        gc.setFont(Font.font("Arial", 14));
-        gc.setTextAlign(TextAlignment.LEFT);
-        gc.fillText(text, x, y);
-    }
-
-    private void handleClick(double x, double y) {
-        if (isRect(x, y, 795, 552, 180, 40)) {
-            send("STATE", "");
-            return;
+    private boolean handlePaymentSelection(double x, double y) {
+        if (!game.isPaymentSelecting()) {
+            return false;
         }
-        if (!started && isRect(x, y, 795, 500, 180, 40)) {
-            send("START_GAME", "");
-            return;
-        }
-        if (started && isRect(x, y, 795, 500, 180, 40)) {
-            send("END_TURN", "");
-            return;
-        }
-        if (state.payment.youMustPay && paymentButtonY > 0 && isRect(x, y, 795, paymentButtonY, 160, 38)) {
-            showPaymentDialog();
-            return;
-        }
-        if (state.payment.youMustPay && state.payment.canJustSayNo
-                && justSayNoButtonY > 0 && isRect(x, y, 795, justSayNoButtonY, 160, 38)) {
+        if (gameScreen.isPaymentJustSayNoClicked(x, y)) {
             send("JUST_SAY_NO", "");
-            return;
+            gameScreen.clearPaymentSelection();
+            return true;
         }
-        int propertyIndex = clickedOwnPropertyIndex(x, y);
-        if (propertyIndex != -1 && propertyIndex <= state.yourProperties.size()) {
-            CardInfo property = state.yourProperties.get(propertyIndex - 1);
-            if (property.isWild()) {
-                showWildColorDialog(property);
+        if (gameScreen.isPaymentClearClicked(x, y)) {
+            gameScreen.clearPaymentSelection();
+            return true;
+        }
+        if (gameScreen.isPaymentConfirmClicked(x, y)) {
+            if (gameScreen.canConfirmPayment()) {
+                send("PAY", paymentBody(gameScreen.getSelectedPaymentCards()));
+                gameScreen.clearPaymentSelection();
             }
-            return;
+            return true;
         }
-        int handIndex = clickedHandIndex(x, y);
-        if (handIndex != -1 && handIndex <= state.yourHand.size()) {
-            CardInfo card = state.yourHand.get(handIndex - 1);
-            if (state.discardPhase) {
-                send("DISCARD", Integer.toString(card.index));
-            } else if (card.kind == CardKind.ACTION) {
-                showActionDialog(card);
-            } else {
-                send("PLAY_CARD", Integer.toString(card.index));
+        return gameScreen.handlePaymentCardClick(x, y);
+    }
+
+    private boolean handleForcedDealSelection(double x, double y) {
+        if (!gameScreen.isForcedDealSelecting()) {
+            return false;
+        }
+        if (gameScreen.isForcedDealCancelClicked(x, y)) {
+            gameScreen.cancelForcedDealSelection();
+            return true;
+        }
+        if (gameScreen.isForcedDealBackClicked(x, y)) {
+            gameScreen.setSelectedForcedDealTarget(null);
+            return true;
+        }
+        Player targetPlayer = gameScreen.getClickedForcedDealTarget(x, y);
+        if (targetPlayer != null) {
+            gameScreen.setSelectedForcedDealTarget(targetPlayer);
+            return true;
+        }
+        PropertiesCards myCard = gameScreen.getClickedForcedDealMyProperty(x, y);
+        if (myCard != null) {
+            gameScreen.setSelectedForcedDealMyProperty(myCard);
+            return true;
+        }
+        PropertiesCards targetCard = gameScreen.getClickedForcedDealTargetProperty(x, y);
+        if (targetCard != null) {
+            gameScreen.setSelectedForcedDealTargetProperty(targetCard);
+            return true;
+        }
+        if (gameScreen.isForcedDealConfirmClicked(x, y)) {
+            if (gameScreen.canConfirmForcedDeal()) {
+                send("FORCED_DEAL", handNumber(gameScreen.getPendingForcedDealCard())
+                        + " " + playerNumber(gameScreen.getSelectedForcedDealTarget())
+                        + " " + propertyNumber(game.getCurrentPlayer(), gameScreen.getSelectedForcedDealMyProperty())
+                        + " " + propertyNumber(gameScreen.getSelectedForcedDealTarget(), gameScreen.getSelectedForcedDealTargetProperty()));
+                gameScreen.cancelForcedDealSelection();
             }
+            return true;
         }
+        return true;
     }
 
-    private boolean isRect(double x, double y, double rx, double ry, double rw, double rh) {
-        return x >= rx && x <= rx + rw && y >= ry && y <= ry + rh;
+    private boolean handleSlyDealSelection(double x, double y) {
+        if (!gameScreen.isSlyDealSelecting()) {
+            return false;
+        }
+        if (gameScreen.isSlyDealCancelClicked(x, y)) {
+            gameScreen.cancelSlyDealSelection();
+            return true;
+        }
+        GameScreen.SlyDealChoice choice = gameScreen.getClickedSlyDealChoice(x, y);
+        if (choice != null) {
+            send("SLY", handNumber(gameScreen.getPendingSlyDealCard())
+                    + " " + playerNumber(choice.getTargetPlayer())
+                    + " " + propertyNumber(choice.getTargetPlayer(), choice.getSelectedCard()));
+            gameScreen.cancelSlyDealSelection();
+        }
+        return true;
     }
 
-    private int clickedHandIndex(double x, double y) {
-        double gap = 10;
-        if (state.yourHand.size() > 1) {
-            double total = state.yourHand.size() * CARD_WIDTH + (state.yourHand.size() - 1) * gap;
-            if (total > 700) {
-                gap = (700 - state.yourHand.size() * CARD_WIDTH) / (state.yourHand.size() - 1);
+    private boolean handleMultipleColorRentSelection(double x, double y) {
+        if (!gameScreen.isMultipleColorRentSelecting()) {
+            return false;
+        }
+        if (gameScreen.isMultipleColorRentCancelClicked(x, y)) {
+            gameScreen.cancelMultipleColorRentSelection();
+            return true;
+        }
+        Player targetPlayer = gameScreen.getClickedMultipleColorRentTarget(x, y);
+        if (targetPlayer != null) {
+            gameScreen.setSelectedMultipleColorRentTarget(targetPlayer);
+            return true;
+        }
+        if (gameScreen.isMultipleColorDoubleRentClicked(x, y)) {
+            gameScreen.toggleMultipleColorDoubleRent();
+            return true;
+        }
+        PropertyColor selectedColor = gameScreen.getClickedMultipleColorRentColor(x, y);
+        if (selectedColor != null) {
+            gameScreen.setSelectedMultipleColorRentColor(selectedColor);
+            return true;
+        }
+        if (gameScreen.isMultipleColorRentConfirmClicked(x, y)) {
+            if (gameScreen.canConfirmMultipleColorRent()) {
+                send("RENT_ANY", handNumber(gameScreen.getPendingMultipleColorRentCard())
+                        + " " + playerNumber(gameScreen.getSelectedMultipleColorRentTarget())
+                        + " " + gameScreen.getSelectedMultipleColorRentColor().name()
+                        + doubleToken(gameScreen.shouldUseDoubleRentForMultipleColorRent()));
+                gameScreen.cancelMultipleColorRentSelection();
             }
+            return true;
         }
-        for (CardInfo card : state.yourHand) {
-            double cx = handCardX(card.index, gap);
-            if (isRect(x, y, cx, 465, CARD_WIDTH, CARD_HEIGHT)) {
-                return card.index;
-            }
-        }
-        return -1;
+        return true;
     }
 
-    private int clickedOwnPropertyIndex(double x, double y) {
-        for (CardInfo card : state.yourProperties) {
-            int displayIndex = card.index - 1;
-            double cx = 32 + displayIndex * 75;
-            if (displayIndex < 8 && isRect(x, y, cx, 302, SMALL_CARD_WIDTH, SMALL_CARD_HEIGHT)) {
-                return card.index;
-            }
+    private boolean handleDebtCollectorSelection(double x, double y) {
+        if (!gameScreen.isDebtCollectorSelecting()) {
+            return false;
         }
-        return -1;
+        if (gameScreen.isDebtCollectorCancelClicked(x, y)) {
+            gameScreen.cancelDebtCollectorSelection();
+            return true;
+        }
+        Player targetPlayer = gameScreen.getClickedDebtCollectorTarget(x, y);
+        if (targetPlayer != null) {
+            send("DEBT", handNumber(gameScreen.getPendingDebtCollectorCard()) + " " + playerNumber(targetPlayer));
+            gameScreen.cancelDebtCollectorSelection();
+        }
+        return true;
     }
 
-    private void showWildColorDialog(CardInfo property) {
-        Stage dialog = createDialog("Choose wild card color");
-        VBox root = new VBox(10);
-        root.setPadding(new Insets(12));
-        root.getChildren().add(new Label(property.title()));
-
-        ChoiceBox<String> colorChoice = new ChoiceBox<>(FXCollections.observableArrayList(property.allowedColors()));
-        colorChoice.getSelectionModel().selectFirst();
-        root.getChildren().add(colorChoice);
-
-        Button confirm = new Button("Set Color");
-        confirm.setOnAction(e -> {
-            if (colorChoice.getValue() != null) {
-                send("SET_PROPERTY_COLOR", property.index + " " + colorChoice.getValue());
-                dialog.close();
-            }
-        });
-        root.getChildren().add(confirm);
-
-        dialog.setScene(new Scene(root, 300, 160));
-        dialog.showAndWait();
+    private boolean handleDealBreakerSelection(double x, double y) {
+        if (!gameScreen.isDealBreakerSelecting()) {
+            return false;
+        }
+        if (gameScreen.isDealBreakerCancelClicked(x, y)) {
+            gameScreen.cancelDealBreakerSelection();
+            return true;
+        }
+        GameScreen.DealBreakerChoice choice = gameScreen.getClickedDealBreakerChoice(x, y);
+        if (choice != null && !choice.getSelectedSet().isEmpty()) {
+            send("DEAL_BREAKER", handNumber(gameScreen.getPendingDealBreakerCard())
+                    + " " + playerNumber(choice.getTargetPlayer())
+                    + " " + choice.getSelectedSet().getFirst().getCurrentColor().name());
+            gameScreen.cancelDealBreakerSelection();
+        }
+        return true;
     }
 
-    private void showActionDialog(CardInfo card) {
-        Stage dialog = createDialog("Play " + card.title());
-        VBox root = new VBox(10);
-        root.setPadding(new Insets(12));
-
-        ChoiceBox<Integer> targetChoice = new ChoiceBox<>(FXCollections.observableArrayList(otherPlayerIds()));
-        ChoiceBox<CardChoice> propertyChoice = new ChoiceBox<>();
-        ChoiceBox<CardChoice> myPropertyChoice = new ChoiceBox<>(FXCollections.observableArrayList(cardChoices(state.yourProperties)));
-        ChoiceBox<String> colorChoice = new ChoiceBox<>(FXCollections.observableArrayList(COLORS));
-        CheckBox doubleRent = new CheckBox("Use Double The Rent");
-        targetChoice.getSelectionModel().selectFirst();
-        updateTargetProperties(targetChoice, propertyChoice);
-
-        String command = commandForAction(card.actionType);
-        updateActionColors(command, card, targetChoice.getValue(), colorChoice);
-        targetChoice.setOnAction(e -> {
-            updateTargetProperties(targetChoice, propertyChoice);
-            updateActionColors(command, card, targetChoice.getValue(), colorChoice);
-        });
-        root.getChildren().add(new Label(card.title()));
-        root.getChildren().add(new Button("Bank as money") {{
-            setOnAction(e -> {
-                send("PLAY_AS_MONEY", Integer.toString(card.index));
-                dialog.close();
-            });
-        }});
-        if (requiresTarget(command)) {
-            root.getChildren().add(new Label("Target player"));
-            root.getChildren().add(targetChoice);
+    private boolean handleTwoColorRentSelection(double x, double y) {
+        if (!gameScreen.isTwoColorRentSelecting()) {
+            return false;
         }
-        if ("SLY".equals(command) || "FORCED_DEAL".equals(command)) {
-            root.getChildren().add(new Label("Target property"));
-            root.getChildren().add(propertyChoice);
+        if (gameScreen.isTwoColorDoubleRentClicked(x, y)) {
+            gameScreen.toggleTwoColorDoubleRent();
+            return true;
         }
-        if ("FORCED_DEAL".equals(command)) {
-            root.getChildren().add(new Label("Your property"));
-            root.getChildren().add(myPropertyChoice);
+        if (gameScreen.isTwoColorRentCancelClicked(x, y)) {
+            gameScreen.cancelTwoColorRentSelection();
+            return true;
         }
-        if (requiresColor(command)) {
-            root.getChildren().add(new Label("Color"));
-            root.getChildren().add(colorChoice);
+        PropertyColor selectedRentColor = gameScreen.getClickedTwoColorRentColor(x, y);
+        if (selectedRentColor != null) {
+            send("RENT", handNumber(gameScreen.getPendingTwoColorRentCard())
+                    + " " + selectedRentColor.name()
+                    + doubleToken(gameScreen.shouldUseDoubleRentForTwoColorRent()));
+            gameScreen.cancelTwoColorRentSelection();
         }
-        if ("RENT".equals(command) || "RENT_ANY".equals(command)) {
-            root.getChildren().add(doubleRent);
-        }
-
-        Button play = new Button("Play as action");
-        play.setOnAction(e -> {
-            String body = buildActionBody(command, card.index, targetChoice.getValue(), propertyChoice.getValue(),
-                    myPropertyChoice.getValue(), colorChoice.getValue(), doubleRent.isSelected());
-            if (!body.isBlank()) {
-                send(command, body);
-                dialog.close();
-            }
-        });
-        root.getChildren().add(play);
-        dialog.setScene(new Scene(new ScrollPane(root), 320, 420));
-        dialog.showAndWait();
+        return true;
     }
 
-    private void showPaymentDialog() {
-        Stage dialog = createDialog("Select payment");
-        VBox root = new VBox(10);
-        root.setPadding(new Insets(12));
-        root.getChildren().add(new Label("Select cards to pay " + state.payment.amount + "M"));
-        List<CheckBox> boxes = new ArrayList<>();
-        for (CardInfo card : state.yourBank) {
-            CheckBox box = new CheckBox("B" + card.index + " - " + card.title());
-            boxes.add(box);
-            root.getChildren().add(box);
+    private boolean handleWildCardClick(double x, double y) {
+        PropertyColor selectedColor = gameScreen.getClickedWildColorButton(x, y);
+        if (selectedColor != null && gameScreen.getSelectedWildCard() != null) {
+            send("SET_PROPERTY_COLOR", propertyNumber(game.getCurrentPlayer(), gameScreen.getSelectedWildCard())
+                    + " " + selectedColor.name());
+            gameScreen.clearSelectedWildCard();
+            return true;
         }
-        for (CardInfo card : state.yourProperties) {
-            CheckBox box = new CheckBox("P" + card.index + " - " + card.title());
-            boxes.add(box);
-            root.getChildren().add(box);
+        PropertiesCards clickedWildCard = gameScreen.getClickedWildCard(x, y);
+        if (clickedWildCard != null) {
+            gameScreen.setSelectedWildCard(clickedWildCard);
+            return true;
         }
-        Button pay = new Button("Pay");
-        pay.setOnAction(e -> {
-            ArrayList<String> selected = new ArrayList<>();
-            for (CheckBox box : boxes) {
-                if (box.isSelected()) {
-                    selected.add(box.getText().split(" ", 2)[0]);
-                }
-            }
-            send("PAY", String.join(" ", selected));
-            dialog.close();
-        });
-        root.getChildren().add(pay);
-        dialog.setScene(new Scene(new ScrollPane(root), 360, 460));
-        dialog.showAndWait();
-    }
-
-    private Stage createDialog(String title) {
-        Stage dialog = new Stage();
-        dialog.initOwner(this);
-        dialog.initModality(Modality.WINDOW_MODAL);
-        dialog.setTitle(title);
-        return dialog;
-    }
-
-    private void updateTargetProperties(ChoiceBox<Integer> targetChoice, ChoiceBox<CardChoice> propertyChoice) {
-        int target = targetChoice.getValue() == null ? -1 : targetChoice.getValue();
-        propertyChoice.setItems(FXCollections.observableArrayList(cardChoices(state.publicProperties.get(target))));
-        propertyChoice.getSelectionModel().selectFirst();
-    }
-
-    private List<Integer> otherPlayerIds() {
-        ArrayList<Integer> ids = new ArrayList<>();
-        for (PlayerSummary player : state.players) {
-            if (player.id != state.you) {
-                ids.add(player.id);
-            }
-        }
-        return ids;
-    }
-
-    private List<CardChoice> cardChoices(List<CardInfo> cards) {
-        ArrayList<CardChoice> choices = new ArrayList<>();
-        if (cards == null) {
-            return choices;
-        }
-        for (CardInfo card : cards) {
-            choices.add(new CardChoice(card.index, card.title() + " / " + card.displayPropertyColor()));
-        }
-        return choices;
-    }
-
-    private String commandForAction(String actionType) {
-        return switch (actionType) {
-            case "PASS_GO" -> "PASS_GO";
-            case "BIRTHDAY" -> "BIRTHDAY";
-            case "DEBT_COLLECTOR" -> "DEBT";
-            case "SLY_DEAL" -> "SLY";
-            case "DEAL_BREAKER" -> "DEAL_BREAKER";
-            case "RENT_WITH_MULTIPLE_COLOR" -> "RENT_ANY";
-            case "HOUSE" -> "HOUSE";
-            case "HOTEL" -> "HOTEL";
-            case "FORCED_DEAL" -> "FORCED_DEAL";
-            default -> "RENT";
-        };
-    }
-
-    private boolean requiresTarget(String command) {
-        return "DEBT".equals(command) || "SLY".equals(command) || "DEAL_BREAKER".equals(command)
-                || "RENT_ANY".equals(command) || "FORCED_DEAL".equals(command);
-    }
-
-    private boolean requiresColor(String command) {
-        return "DEAL_BREAKER".equals(command) || "RENT".equals(command) || "RENT_ANY".equals(command)
-                || "HOUSE".equals(command) || "HOTEL".equals(command);
-    }
-
-    private void updateActionColors(String command,
-                                    CardInfo actionCard,
-                                    Integer targetPlayer,
-                                    ChoiceBox<String> colorChoice) {
-        List<String> colors = colorOptionsForCommand(command, actionCard, targetPlayer);
-        colorChoice.setItems(FXCollections.observableArrayList(colors));
-        colorChoice.getSelectionModel().selectFirst();
-    }
-
-    private List<String> colorOptionsForCommand(String command, CardInfo actionCard, Integer targetPlayer) {
-        if ("RENT".equals(command)) {
-            return switch (actionCard.actionType) {
-                case "RENT_WITH_DARK_BLUE_AND_DARK_GREEN" -> ownPlayableColors(List.of("DARK_BLUE", "DARK_GREEN"));
-                case "RENT_WITH_BROWN_AND_LIGHT_BLUE" -> ownPlayableColors(List.of("BROWN", "LIGHT_BLUE"));
-                case "RENT_WITH_BLACK_AND_LIGHT_GREEN" -> ownPlayableColors(List.of("BLACK", "LIGHT_GREEN"));
-                case "RENT_WITH_RED_AND_YELLOW" -> ownPlayableColors(List.of("RED", "YELLOW"));
-                case "RENT_WITH_ORANGE_AND_PINK" -> ownPlayableColors(List.of("ORANGE", "PINK"));
-                default -> ownPlayableColors(COLORS);
-            };
-        }
-
-        if ("RENT_ANY".equals(command) || "HOUSE".equals(command) || "HOTEL".equals(command)) {
-            return ownPlayableColors(COLORS);
-        }
-
-        if ("DEAL_BREAKER".equals(command)) {
-            return playerPropertyColors(targetPlayer);
-        }
-
-        return COLORS;
-    }
-
-    private List<String> ownPlayableColors(List<String> candidates) {
-        ArrayList<String> colors = new ArrayList<>();
-        for (String color : candidates) {
-            if (playerHasPropertyColor(state.you, color)) {
-                colors.add(color);
-            }
-        }
-        return colors.isEmpty() ? candidates : colors;
-    }
-
-    private List<String> playerPropertyColors(Integer playerId) {
-        ArrayList<String> colors = new ArrayList<>();
-        if (playerId == null) {
-            return COLORS;
-        }
-
-        List<CardInfo> properties = state.publicProperties.get(playerId);
-        if (properties == null) {
-            return COLORS;
-        }
-
-        for (CardInfo property : properties) {
-            if (!property.propertyColor.isBlank() && !"NO_COLOR".equals(property.propertyColor)
-                    && !colors.contains(property.propertyColor)) {
-                colors.add(property.propertyColor);
-            }
-        }
-
-        return colors.isEmpty() ? COLORS : colors;
-    }
-
-    private boolean playerHasPropertyColor(int playerId, String color) {
-        List<CardInfo> properties = state.publicProperties.get(playerId);
-        if (properties == null) {
-            properties = state.yourProperties;
-        }
-
-        for (CardInfo property : properties) {
-            if (color.equals(property.propertyColor)) {
-                return true;
-            }
-        }
-
         return false;
     }
 
-    private String buildActionBody(String command, int handIndex, Integer target, CardChoice targetProperty,
-                                   CardChoice myProperty, String color, boolean doubleRent) {
-        ArrayList<String> parts = new ArrayList<>();
-        parts.add(Integer.toString(handIndex));
-        switch (command) {
-            case "DEBT" -> {
-                if (target == null) {
-                    return "";
-                }
-                parts.add(Integer.toString(target));
-            }
-            case "SLY" -> {
-                if (target == null || targetProperty == null) {
-                    return "";
-                }
-                parts.add(Integer.toString(target));
-                parts.add(Integer.toString(targetProperty.index));
-            }
-            case "DEAL_BREAKER", "RENT_ANY" -> {
-                if (target == null || color == null) {
-                    return "";
-                }
-                parts.add(Integer.toString(target));
-                parts.add(color);
-            }
-            case "FORCED_DEAL" -> {
-                if (target == null || myProperty == null || targetProperty == null) {
-                    return "";
-                }
-                parts.add(Integer.toString(target));
-                parts.add(Integer.toString(myProperty.index));
-                parts.add(Integer.toString(targetProperty.index));
-            }
-            case "RENT", "HOUSE", "HOTEL" -> {
-                if (color == null) {
-                    return "";
-                }
-                parts.add(color);
-            }
-            default -> {
-            }
+    private boolean handleBuildingSelection(double x, double y) {
+        if (!gameScreen.isBuildingSelecting()) {
+            return false;
         }
-        if (doubleRent) {
-            parts.add("DOUBLE");
+        if (gameScreen.isBuildingCancelClicked(x, y)) {
+            gameScreen.cancelBuildingSelection();
+            return true;
         }
-        return String.join(" ", parts);
+        PropertyColor selectedColor = gameScreen.getClickedBuildingColor(x, y);
+        if (selectedColor != null) {
+            ActionCards card = gameScreen.getPendingBuildingCard();
+            send(card.getActionCardType().name(), handNumber(card) + " " + selectedColor.name());
+            gameScreen.cancelBuildingSelection();
+        }
+        return true;
+    }
+
+    private boolean handleButtonClick(double x, double y) {
+        if (gameScreen.isEndTurnClicked(x, y)) {
+            gameScreen.clearSelectedWildCard();
+            gameScreen.closeActionCardChoice();
+            send("END_TURN", "");
+            return true;
+        }
+        if (gameScreen.isBackMenuClicked(x, y)) {
+            close();
+            shutdown();
+            return true;
+        }
+        int viewedPlayerIndex = gameScreen.getClickedPlayerViewButtonIndex(x, y);
+        if (viewedPlayerIndex != -1) {
+            gameScreen.clearSelectedWildCard();
+            gameScreen.closeActionCardChoice();
+            gameScreen.showPlayerDetailPopup(viewedPlayerIndex);
+            return true;
+        }
+        return false;
+    }
+
+    private void handleHandCardClick(double x, double y) {
+        int handIndex = gameScreen.getClickedHandCardIndex(x, y);
+        if (handIndex == -1 || handIndex >= game.getCurrentPlayer().getHandCards().size()) {
+            return;
+        }
+        Card selectedCard = game.getCurrentPlayer().getHandCards().get(handIndex);
+        if (game.isDiscard()) {
+            send("DISCARD", Integer.toString(handIndex + 1));
+            return;
+        }
+        if (game.getCurrentPlayer().getUseCardTimes() >= 3) {
+            return;
+        }
+        if (selectedCard instanceof ActionCards actionCard) {
+            gameScreen.showActionCardChoice(actionCard);
+            return;
+        }
+        send("PLAY_CARD", Integer.toString(handIndex + 1));
+    }
+
+    private void handleActionCardClick(Card selectedCard) {
+        if (!(selectedCard instanceof ActionCards actionCard)) {
+            return;
+        }
+        ActionCardType type = actionCard.getActionCardType();
+        switch (type) {
+            case SLY_DEAL -> gameScreen.startSlyDealSelection(actionCard);
+            case RENT_WITH_MULTIPLE_COLOR -> gameScreen.startMultipleColorRentSelection(actionCard);
+            case HOUSE, HOTEL -> gameScreen.startBuildingSelection(actionCard);
+            case FORCED_DEAL -> gameScreen.startForcedDealSelection(actionCard);
+            case BIRTHDAY -> send("BIRTHDAY", handNumber(actionCard));
+            case JUST_SAY_NO, DOUBLE_THE_RENT -> {
+            }
+            case DEBT_COLLECTOR -> gameScreen.startDebtCollectorSelection(actionCard);
+            case DEAL_BREAKER -> gameScreen.startDealBreakerSelection(actionCard);
+            case RENT_WITH_DARK_BLUE_AND_DARK_GREEN,
+                 RENT_WITH_BROWN_AND_LIGHT_BLUE,
+                 RENT_WITH_BLACK_AND_LIGHT_GREEN,
+                 RENT_WITH_RED_AND_YELLOW,
+                 RENT_WITH_ORANGE_AND_PINK -> gameScreen.startTwoColorRentSelection(actionCard);
+            case PASS_GO -> send("PASS_GO", handNumber(actionCard));
+        }
     }
 
     private void runConnection() {
@@ -726,7 +514,6 @@ public class OnlinePlayWindow extends Stage {
                 appendLog("Connected.");
                 send("PLAYERS", "");
             });
-
             String line;
             while (!closed && (line = in.readLine()) != null) {
                 NetworkMessage message = NetworkMessage.decode(line);
@@ -744,36 +531,58 @@ public class OnlinePlayWindow extends Stage {
 
     private void handleServerMessage(NetworkMessage message) {
         appendLog(message.getType() + ": " + message.getBody());
-        if ("FULL".equals(message.getType())) {
-            connectionText = "Rejected";
-        } else if ("WELCOME".equals(message.getType())) {
-            state.you = parsePlayerId(message.getBody());
-        } else if ("PLAYER_LIST".equals(message.getType()) && !started) {
-            state.players.clear();
-            state.players.addAll(parseLobbyPlayers(message.getBody()));
-        } else if ("GAME_STATE".equals(message.getType())) {
-            started = true;
-            state = OnlineState.parse(message.getBody());
-        }
-    }
-
-    private int parsePlayerId(String text) {
-        String[] parts = text.trim().split("\\s+");
-        if (parts.length == 2) {
-            return OnlineState.parseInt(parts[1]);
-        }
-        return state.you;
-    }
-
-    private List<PlayerSummary> parseLobbyPlayers(String body) {
-        ArrayList<PlayerSummary> players = new ArrayList<>();
-        for (String token : body.split(",")) {
-            String trimmed = token.trim();
-            if (trimmed.startsWith("PLAYER ")) {
-                players.add(new PlayerSummary(OnlineState.parseInt(trimmed.substring(7)), 0, 0, 0));
+        switch (message.getType()) {
+            case "WELCOME" -> myPlayerId = parseInt(message.getBody().replace("PLAYER", "").trim());
+            case "FULL" -> connectionText = "Rejected";
+            case "GAME_STATE" -> {
+                OnlineSnapshot snapshot = OnlineSnapshot.parse(message.getBody());
+                myPlayerId = snapshot.you;
+                game.applyOnlineState(snapshot.players, snapshot.currentPlayerIndex, snapshot.discard,
+                        snapshot.paymentRequest, snapshot.win);
+                gameScreen.resetViewedPlayerToCurrentPlayer();
+                started = true;
+            }
+            default -> {
             }
         }
-        return players;
+    }
+
+    private String handNumber(Card card) {
+        return Integer.toString(game.getCurrentPlayer().getHandCards().indexOf(card) + 1);
+    }
+
+    private int playerNumber(Player player) {
+        return game.getPlayers().indexOf(player) + 1;
+    }
+
+    private int propertyNumber(Player player, PropertiesCards card) {
+        return player.getPropertyCards().indexOf(card) + 1;
+    }
+
+    private String paymentBody(ArrayList<Card> selectedCards) {
+        Game.PaymentRequest request = game.getCurrentPaymentRequest();
+        Player payer = request.getPayer();
+        ArrayList<String> tokens = new ArrayList<>();
+        for (Card card : selectedCards) {
+            int bankIndex = payer.getBankCards().indexOf(card);
+            if (bankIndex >= 0) {
+                tokens.add("B" + (bankIndex + 1));
+                continue;
+            }
+            int propertyIndex = payer.getPropertyCards().indexOf(card);
+            if (propertyIndex >= 0) {
+                tokens.add("P" + (propertyIndex + 1));
+            }
+        }
+        return String.join(" ", tokens);
+    }
+
+    private String doubleToken(boolean useDoubleRent) {
+        return useDoubleRent ? " DOUBLE" : "";
+    }
+
+    private boolean isRect(double x, double y, double rx, double ry, double rw, double rh) {
+        return x >= rx && x <= rx + rw && y >= ry && y <= ry + rh;
     }
 
     private void send(String type, String body) {
@@ -784,8 +593,8 @@ public class OnlinePlayWindow extends Stage {
 
     private void appendLog(String text) {
         logLines.add(text);
-        while (logLines.size() > 30) {
-            logLines.remove(0);
+        while (logLines.size() > 20) {
+            logLines.removeFirst();
         }
     }
 
@@ -800,218 +609,55 @@ public class OnlinePlayWindow extends Stage {
         }
     }
 
-    private enum CardKind {
-        MONEY,
-        ACTION,
-        PROPERTY,
-        UNKNOWN
-    }
-
-    private record CardChoice(int index, String label) {
-        @Override
-        public String toString() {
-            return index + ". " + label;
-        }
-    }
-
-    private record CardInfo(int index,
-                            String raw,
-                            CardKind kind,
-                            String actionType,
-                            String propertyType,
-                            String propertyColor,
-                            String imagePath,
-                            int value) {
-        static CardInfo parse(int index, String raw) {
-            if (raw.startsWith("MONEY:") || raw.startsWith("ACTION:") || raw.startsWith("PROPERTY:")) {
-                return parseColonFormat(index, raw);
-            }
-
-            if (raw.startsWith("MONEY_")) {
-                int value = trailingValue(raw);
-                return new CardInfo(index, raw, CardKind.MONEY, "", "", "", "/images/money/money_" + value + ".png", value);
-            }
-            if (raw.startsWith("ACTION_")) {
-                String actionType = raw.substring("ACTION_".length(), raw.lastIndexOf('_'));
-                return new CardInfo(index, raw, CardKind.ACTION, actionType, "", "", actionImagePath(actionType), trailingValue(raw));
-            }
-            if (raw.startsWith("PROPERTY_")) {
-                return new CardInfo(index, raw, CardKind.PROPERTY, "", "", "", "", trailingValue(raw));
-            }
-            return new CardInfo(index, raw, CardKind.UNKNOWN, "", "", "", "", 0);
-        }
-
-        private static CardInfo parseColonFormat(int index, String raw) {
-            String[] parts = raw.split(":", -1);
-
-            if ("MONEY".equals(parts[0]) && parts.length >= 2) {
-                int value = parseInt(parts[1]);
-                return new CardInfo(index, raw, CardKind.MONEY, "", "", "", "/images/money/money_" + value + ".png", value);
-            }
-
-            if ("ACTION".equals(parts[0]) && parts.length >= 3) {
-                String actionType = parts[1];
-                int value = parseInt(parts[2]);
-                return new CardInfo(index, raw, CardKind.ACTION, actionType, "", "", actionImagePath(actionType), value);
-            }
-
-            if ("PROPERTY".equals(parts[0]) && parts.length >= 5) {
-                String propertyType = parts[1];
-                String color = parts[2];
-                String imageFileName = parts[3];
-                int value = parseInt(parts[4]);
-                String folder = propertyType.startsWith("WILD_") ? "property_wildcards" : "property";
-                return new CardInfo(index, raw, CardKind.PROPERTY, "", propertyType, color,
-                        "/images/" + folder + "/" + imageFileName, value);
-            }
-
-            return new CardInfo(index, raw, CardKind.UNKNOWN, "", "", "", "", 0);
-        }
-
-        private static String actionImagePath(String actionType) {
-            String fileName = actionType.toLowerCase() + ".png";
-            String folder = actionType.startsWith("RENT_WITH") ? "rent" : "action";
-            return "/images/" + folder + "/" + fileName;
-        }
-
-        private static int trailingValue(String raw) {
-            int last = raw.lastIndexOf('_');
-            if (last < 0) {
-                return 0;
-            }
-            try {
-                return Integer.parseInt(raw.substring(last + 1));
-            } catch (NumberFormatException e) {
-                return 0;
-            }
-        }
-
-        private static int parseInt(String text) {
-            try {
-                return Integer.parseInt(text);
-            } catch (NumberFormatException e) {
-                return 0;
-            }
-        }
-
-        String title() {
-            if (kind == CardKind.MONEY) {
-                return "Money " + value;
-            }
-            if (kind == CardKind.ACTION && !actionType.isBlank()) {
-                return actionType.replace("_", " ");
-            }
-            if (kind == CardKind.PROPERTY && !propertyType.isBlank()) {
-                return propertyType.replace("_", " ");
-            }
-            String cleaned = raw.replace("ACTION_", "").replace("PROPERTY_", "");
-            int last = cleaned.lastIndexOf('_');
-            if (last > 0) {
-                cleaned = cleaned.substring(0, last);
-            }
-            return cleaned.replace("_", " ");
-        }
-
-        String displayPropertyColor() {
-            if (!propertyColor.isBlank()) {
-                return propertyColor.replace("_", " ");
-            }
-
-            if (!raw.startsWith("PROPERTY_")) {
-                return title();
-            }
-            String[] parts = raw.split("_");
-            if (parts.length >= 3) {
-                return parts[parts.length - 2].replace("_", " ");
-            }
-            return title();
-        }
-
-        boolean isWild() {
-            return propertyType.startsWith("WILD_");
-        }
-
-        List<String> allowedColors() {
-            return switch (propertyType) {
-                case "WILD_PINK_ORANGE" -> List.of("PINK", "ORANGE");
-                case "WILD_RED_YELLOW" -> List.of("RED", "YELLOW");
-                case "WILD_BLACK_DARK_GREEN" -> List.of("BLACK", "DARK_GREEN");
-                case "WILD_BLACK_LIGHT_BLUE" -> List.of("BLACK", "LIGHT_BLUE");
-                case "WILD_BLACK_LIGHT_GREEN" -> List.of("BLACK", "LIGHT_GREEN");
-                case "WILD_LIGHT_BLUE_BROWN" -> List.of("LIGHT_BLUE", "BROWN");
-                case "WILD_DARK_BLUE_DARK_GREEN" -> List.of("DARK_BLUE", "DARK_GREEN");
-                case "WILD_ALL" -> COLORS;
-                default -> propertyColor.isBlank() ? COLORS : List.of(propertyColor);
-            };
-        }
-    }
-
-    private record PlayerSummary(int id, int hand, int bank, int properties) {
-    }
-
-    private static class PaymentState {
-        private static final PaymentState NONE = new PaymentState(false, 0, 0, 0, false, false);
-
-        private final boolean active;
-        private final int payer;
-        private final int receiver;
-        private final int amount;
-        private final boolean youMustPay;
-        private final boolean canJustSayNo;
-
-        PaymentState(boolean active, int payer, int receiver, int amount, boolean youMustPay, boolean canJustSayNo) {
-            this.active = active;
-            this.payer = payer;
-            this.receiver = receiver;
-            this.amount = amount;
-            this.youMustPay = youMustPay;
-            this.canJustSayNo = canJustSayNo;
-        }
-    }
-
-    private static class OnlineState {
-        private int you;
-        private int currentPlayer;
-        private boolean discardPhase;
-        private PaymentState payment = PaymentState.NONE;
-        private final ArrayList<PlayerSummary> players = new ArrayList<>();
-        private final ArrayList<CardInfo> yourHand = new ArrayList<>();
-        private final ArrayList<CardInfo> yourBank = new ArrayList<>();
-        private final ArrayList<CardInfo> yourProperties = new ArrayList<>();
-        private final Map<Integer, List<CardInfo>> publicBanks = new LinkedHashMap<>();
-        private final Map<Integer, List<CardInfo>> publicProperties = new LinkedHashMap<>();
-
-        static OnlineState empty() {
-            return new OnlineState();
-        }
-
-        static OnlineState parse(String body) {
-            OnlineState state = new OnlineState();
-            Map<String, String> fields = splitFields(body);
-            state.you = parseInt(fields.get("you"));
-            state.currentPlayer = parseInt(fields.get("currentPlayer"));
-            state.discardPhase = Boolean.parseBoolean(fields.getOrDefault("discardPhase", "false"));
-            state.payment = parsePayment(fields.get("payment"));
-            state.players.addAll(parsePlayers(fields.get("players")));
-            state.yourHand.addAll(parseCards(fields.get("yourHand")));
-            state.yourBank.addAll(parseCards(fields.get("yourBank")));
-            state.yourProperties.addAll(parseCards(fields.get("yourProperties")));
-            state.publicBanks.putAll(parsePublicCards(fields.get("publicBanks")));
-            state.publicProperties.putAll(parsePublicCards(fields.get("publicProperties")));
-            return state;
-        }
-
-        int propertyCountForPlayer(int playerId) {
-            if (publicProperties.containsKey(playerId)) {
-                return publicProperties.get(playerId).size();
-            }
-
-            for (PlayerSummary player : players) {
-                if (player.id == playerId) {
-                    return player.properties;
-                }
-            }
+    private static int parseInt(String text) {
+        try {
+            return Integer.parseInt(text);
+        } catch (NumberFormatException | NullPointerException e) {
             return 0;
+        }
+    }
+
+    private static class OnlineSnapshot {
+        private final ArrayList<Player> players = new ArrayList<>();
+        private int you;
+        private int currentPlayerIndex;
+        private boolean discard;
+        private boolean win;
+        private Game.PaymentRequest paymentRequest;
+
+        static OnlineSnapshot parse(String body) {
+            OnlineSnapshot snapshot = new OnlineSnapshot();
+            Map<String, String> fields = splitFields(body);
+            snapshot.you = parseInt(fields.get("you"));
+            snapshot.currentPlayerIndex = Math.max(0, parseInt(fields.get("currentPlayer")) - 1);
+            snapshot.discard = Boolean.parseBoolean(fields.getOrDefault("discardPhase", "false"));
+            snapshot.win = Boolean.parseBoolean(fields.getOrDefault("win", "false"));
+
+            Map<Integer, Integer> usedCounts = parseUsedCounts(fields.get("players"));
+            Map<Integer, List<Card>> hands = parseCardGroups(fields.get("allHands"));
+            Map<Integer, List<Card>> banks = parseCardGroups(fields.get("publicBanks"));
+            Map<Integer, List<Card>> properties = parseCardGroups(fields.get("publicProperties"));
+            int playerCount = Math.max(Math.max(hands.size(), banks.size()), properties.size());
+
+            DrawPileAndDiscardPile drawPile = new DrawPileAndDiscardPile();
+            for (int i = 1; i <= playerCount; i++) {
+                Player player = new Player(drawPile);
+                player.getHandCards().clear();
+                player.getBankCards().clear();
+                player.getPropertyCards().clear();
+                player.getHandCards().addAll(hands.getOrDefault(i, List.of()));
+                player.getBankCards().addAll(banks.getOrDefault(i, List.of()));
+                for (Card card : properties.getOrDefault(i, List.of())) {
+                    if (card instanceof PropertiesCards propertyCard) {
+                        player.getPropertyCards().add(propertyCard);
+                    }
+                }
+                player.setUseCardTimes(usedCounts.getOrDefault(i, 0));
+                snapshot.players.add(player);
+            }
+
+            snapshot.paymentRequest = parsePayment(fields.get("payment"), snapshot.players);
+            return snapshot;
         }
 
         private static Map<String, String> splitFields(String body) {
@@ -1025,32 +671,11 @@ public class OnlinePlayWindow extends Stage {
             return fields;
         }
 
-        private static PaymentState parsePayment(String text) {
-            if (text == null || text.equals("none")) {
-                return PaymentState.NONE;
-            }
-            Map<String, String> values = new LinkedHashMap<>();
-            for (String token : text.split(",")) {
-                String[] pair = token.split("=", 2);
-                if (pair.length == 2) {
-                    values.put(pair[0], pair[1]);
-                }
-            }
-            return new PaymentState(
-                    true,
-                    parseInt(values.get("payer")),
-                    parseInt(values.get("receiver")),
-                    parseInt(values.get("amount")),
-                    Boolean.parseBoolean(values.getOrDefault("youMustPay", "false")),
-                    Boolean.parseBoolean(values.getOrDefault("canJustSayNo", "false"))
-            );
-        }
-
-        private static List<PlayerSummary> parsePlayers(String text) {
+        private static Map<Integer, Integer> parseUsedCounts(String text) {
+            Map<Integer, Integer> result = new LinkedHashMap<>();
             if (text == null || text.isBlank()) {
-                return List.of();
+                return result;
             }
-            ArrayList<PlayerSummary> players = new ArrayList<>();
             int cursor = 0;
             while (cursor < text.length()) {
                 int next = text.indexOf("),P", cursor);
@@ -1064,66 +689,98 @@ public class OnlinePlayWindow extends Stage {
                 }
                 int open = token.indexOf('(');
                 int close = token.indexOf(')');
-                if (!token.startsWith("P") || open < 0 || close < 0) {
+                if (!token.startsWith("P") || open < 0 || close < open) {
                     continue;
                 }
-                int id = parseInt(token.substring(1, open));
-                Map<String, String> values = new LinkedHashMap<>();
+                int playerId = parseInt(token.substring(1, open));
+                int used = 0;
                 for (String item : token.substring(open + 1, close).split(",")) {
                     String[] pair = item.split("=", 2);
-                    if (pair.length == 2) {
-                        values.put(pair[0], pair[1]);
+                    if (pair.length == 2 && "used".equals(pair[0])) {
+                        used = parseInt(pair[1]);
                     }
                 }
-                players.add(new PlayerSummary(id, parseInt(values.get("hand")),
-                        parseInt(values.get("bank")), parseInt(values.get("properties"))));
+                result.put(playerId, used);
             }
-            return players;
-        }
-
-        private static Map<Integer, List<CardInfo>> parsePublicCards(String text) {
-            Map<Integer, List<CardInfo>> result = new LinkedHashMap<>();
-            if (text == null || text.isBlank()) {
-                return result;
-            }
-
-            for (String playerToken : text.split("\\|")) {
-                int open = playerToken.indexOf('[');
-                int close = playerToken.lastIndexOf(']');
-
-                if (!playerToken.startsWith("P") || open < 0 || close < open) {
-                    continue;
-                }
-
-                int playerId = parseInt(playerToken.substring(1, open));
-                result.put(playerId, parseCards(playerToken.substring(open + 1, close), "~"));
-            }
-
             return result;
         }
 
-        private static List<CardInfo> parseCards(String text) {
-            return parseCards(text, ",");
+        private static Map<Integer, List<Card>> parseCardGroups(String text) {
+            Map<Integer, List<Card>> result = new LinkedHashMap<>();
+            if (text == null || text.isBlank()) {
+                return result;
+            }
+            for (String token : text.split("\\|")) {
+                int open = token.indexOf('[');
+                int close = token.lastIndexOf(']');
+                if (!token.startsWith("P") || open < 0 || close < open) {
+                    continue;
+                }
+                int playerId = parseInt(token.substring(1, open));
+                result.put(playerId, parseCards(token.substring(open + 1, close), "~"));
+            }
+            return result;
         }
 
-        private static List<CardInfo> parseCards(String text, String separator) {
+        private static List<Card> parseCards(String text, String separator) {
             if (text == null || text.isBlank()) {
                 return List.of();
             }
-            ArrayList<CardInfo> cards = new ArrayList<>();
-            String[] rawCards = text.split(java.util.regex.Pattern.quote(separator));
-            for (int i = 0; i < rawCards.length; i++) {
-                cards.add(CardInfo.parse(i + 1, rawCards[i]));
+            ArrayList<Card> cards = new ArrayList<>();
+            for (String raw : text.split(Pattern.quote(separator))) {
+                Card card = parseCard(raw);
+                if (card != null) {
+                    cards.add(card);
+                }
             }
             return cards;
         }
 
-        private static int parseInt(String text) {
-            try {
-                return Integer.parseInt(text);
-            } catch (NumberFormatException | NullPointerException e) {
-                return 0;
+        private static Card parseCard(String raw) {
+            String[] parts = raw.split(":", -1);
+            if (parts.length == 0) {
+                return null;
             }
+            if ("MONEY".equals(parts[0]) && parts.length >= 2) {
+                return new MoneyCards(parseInt(parts[1]));
+            }
+            if ("ACTION".equals(parts[0]) && parts.length >= 2) {
+                return new ActionCards(ActionCardType.valueOf(parts[1]));
+            }
+            if ("PROPERTY".equals(parts[0]) && parts.length >= 5) {
+                PropertiesCardsType type = PropertiesCardsType.valueOf(parts[1]);
+                PropertiesCards card = new PropertiesCards(type, type.name(), parts[3]);
+                if (!"NO_COLOR".equals(parts[2])) {
+                    card.setCurrentColor(PropertyColor.valueOf(parts[2]));
+                }
+                if (parts.length >= 7) {
+                    card.setHasHouse(Boolean.parseBoolean(parts[5]));
+                    card.setHasHotel(Boolean.parseBoolean(parts[6]));
+                }
+                return card;
+            }
+            return null;
+        }
+
+        private static Game.PaymentRequest parsePayment(String text, ArrayList<Player> players) {
+            if (text == null || text.equals("none")) {
+                return null;
+            }
+            Map<String, String> values = new LinkedHashMap<>();
+            for (String token : text.split(",")) {
+                String[] pair = token.split("=", 2);
+                if (pair.length == 2) {
+                    values.put(pair[0], pair[1]);
+                }
+            }
+            int payerIndex = parseInt(values.get("payer")) - 1;
+            int receiverIndex = parseInt(values.get("receiver")) - 1;
+            int amount = parseInt(values.get("amount"));
+            if (payerIndex < 0 || receiverIndex < 0
+                    || payerIndex >= players.size() || receiverIndex >= players.size()) {
+                return null;
+            }
+            return new Game.PaymentRequest(players.get(receiverIndex), players.get(payerIndex), amount);
         }
     }
 }
